<resources>
    <string name="app_name">Sustainability</string>
    <string name="screen1">Bienvenido(a)</string>
    <string name="screen2">Tu huella de carbono</string>
    <string name="screen3">Reduce</string>
    <string name="screen4">Compensa</string>
    <string name="screen1desc">Aprende con nosotros sobre tu relación con el medio ambiente.</string>
    <string name="screen2desc">Conoce el valor estimado de tu huella de carbono con base en tus actividades y hábitos. </string>
    <string name="screen3desc">Reconoce cómo llevar una vida más amigable con el medio ambiente.</string>
    <string name="screen4desc">Sé amable con el medio ambiente compensando tu huella de carbono.</string>
    <string name="startDesc">Reduce tu huella de carbono y luchemos juntos contra el cambio climático.</string>
    <string name="btn_LoginBackendless">Log in</string>
    <string name="btn_LogoutBackendless">Logout from Backendless</string>
    <string name="btn_LoginFacebook">Login in Facebook</string>
    <string name="btn_LoginGooglePlus">Login in GooglePlus</string>
    <string name="btn_LoginTwitter">Login in Twitter</string>
    <string name="textView_BackendlessUserInfo">Backendless User info.</string>
    <string name="editText_BackendlessUserInfo">You should login as Backendless user first.</string>
    <string name="register_text">Register</string>
    <string name="restore_link">Restore</string>
    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="password_recovery_page_name">Recuperación de contraseña</string>
    <string name="remember_login_text">Recuérdame</string>
    <string name="ownerId_field_prompt">OwnerId:</string>
    <string name="email_field_prompt">Email:</string>
    <string name="objectId_field_prompt">ObjectId:</string>
    <string name="created_field_prompt">Created:</string>
    <string name="password_field_prompt">Password:</string>
    <string name="updated_field_prompt">Updated:</string>
    <string name="name_field_prompt">Name:</string>
    <string name="file_field_prompt">File:</string>
    <string name="registration_success">¡Registrado correctamente!</string>
    <string name="registration_error">¡Error de registro!</string>
    <string name="restore_password_page_name">Restauración de contraseña</string>
    <string name="password_recovered_message">Enviamos un correo electrónico a su dirección de correo electrónico con un enlace a una página de cambio de contraseña. Por favor, revise su correo electrónico y siga el enlace para obtener más instrucciones..</string>
    <string name="registration_page_name">Inscripción</string>
    <string name="registration_success_message">¡Gracias por registrarte con el %1$s!.</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="inicio_post_login">Calcula tu huella</string>
    <string name="observacion_post_login">Puedes ver tu huella de carbono en la esquina superior izquierda, crecerá o disminuirá en función de tus respuestas</string>
    <string name="calcular">Calcular tu huella</string>
    <string name="back">Atrás</string>
    <string name="next">Siguiente</string>
    <string name="finish">Finalizar</string>
    <string name="start">Comenzar</string>
    <string name="union">¡Únete a la comunidad!</string>
    <string name="skip">Omitir</string>
    <string name="kwh">kWh</string>
    <string name="litros">Litros</string>
    <string name="kg">Kg</string>
    <string name="docenas">Docenas</string>
    <string name="allQuestion">Por favor, complete todas las preguntas antes de avanzar.</string>
    <string name="vivienda">Vivienda</string>
    <string name="pregunta_generica_vivienda">Indica el consumo anual de las siguientes energias:</string>
    <string name="pregunta_vivienda1">La electricidad de tu casa, ¿es solo de fuentes renovables?</string>
    <string name="pregunta_vivienda2">Indica cuántas personas viven en tu domicilio.</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="pregunta_vivienda3">Electricidad</string>
    <string name="pregunta_vivienda4">Gas natural</string>
    <string name="pregunta_vivienda5">Gasoil</string>
    <string name="pregunta_vivienda6">Gas butano</string>
    <string name="pregunta_vivienda7">Gas propano</string>
    <string name="pregunta_vivienda8">Carbón</string>
    <string name="pregunta_vivienda9">Pellets de madera</string>
    <string name="alimentacion">Alimentación</string>
    <string name="pregunta_generica_alimentacion">Indica la cantidad de los siguientes alimentos que consumes a la semana:</string>
    <string name="pregunta_alimentacion1">Hortalizas y legumbres</string>
    <string name="pregunta_alimentacion2">Frutas frescas</string>
    <string name="pregunta_alimentacion3">Cereales desayuno</string>
    <string name="pregunta_alimentacion4">Leche de vaca</string>
    <string name="pregunta_alimentacion5">Huevos</string>
    <string name="pregunta_alimentacion6">Frutos secos</string>
    <string name="pregunta_alimentacion7">Dulces</string>
    <string name="pregunta_alimentacion8">Pescados</string>
    <string name="pregunta_alimentacion9">Mariscos</string>
    <string name="pregunta_alimentacion10">Aceites</string>
    <string name="pregunta_alimentacion11">Carne de pavo</string>
    <string name="pregunta_alimentacion12">Carne pollo</string>
    <string name="pregunta_alimentacion13">Carne cerdo</string>
    <string name="pregunta_alimentacion14">Carne vaca-ternera</string>
    <string name="pregunta_alimentacion15">Cerveza</string>
    <string name="pregunta_alimentacion16">Refrescos</string>
    <string name="pregunta_alimentacion17">Licores</string>
    <string name="pregunta_alimentacion18">Vino</string>
    <string name="ropa">Ropa</string>
    <string name="pregunta_generica_ropa">Indica la cantidad de prendas adquiridas durante el transcurso de un año:</string>
    <string name="pregunta_ropa1">Pantalón vaquero</string>
    <string name="pregunta_ropa2">Otros pantalones</string>
    <string name="pregunta_ropa3">Camisas</string>
    <string name="pregunta_ropa4">Camisetas</string>
    <string name="pregunta_ropa5">Vestidos</string>
    <string name="pregunta_ropa6">Calcetines</string>
    <string name="pregunta_ropa7">Chaquetas</string>
    <string name="pregunta_ropa8">Abrigos</string>
    <string name="pregunta_ropa9">Jerseys</string>
    <string name="pregunta_ropa10">Zapatos</string>
    <string name="pregunta_ropa11">Zapatillas deportivas</string>
    <string name="pregunta_ropa12">Ropa interior</string>
    <string name="transporte">Transporte</string>
    <string name="pregunta_generica_transporte1">¿Tienes automóvil en propiedad?</string>
    <string name="repuestas_rb_transporte1">Sí</string>
    <string name="repuestas_rb_transporte2">No</string>
    <string name="pregunta_generica_transporte2">¿Qué tipo de automóvil utilizas?</string>
    <string name="repuestas_rb_transporte3">Utilitario</string>
    <string name="repuestas_rb_transporte4">Familiar</string>
    <string name="repuestas_rb_transporte6">Berlina</string>
    <string name="repuestas_rb_transporte7">Monovolumen pequeño</string>
    <string name="repuestas_rb_transporte8">Monovolumen Familiar</string>
    <string name="repuestas_rb_transporte9">SUV pequeño</string>
    <string name="repuestas_rb_transporte10">SUV grande</string>
    <string name="pregunta_generica_transporte3">¿Qué tipo combustible utiliza?</string>
    <string name="repuestas_rb_transporte11">Gasolina</string>
    <string name="repuestas_rb_transporte12">Gasoil</string>
    <string name="repuestas_rb_transporte13">Gas natural</string>
    <string name="repuestas_rb_transporte14">Eléctrico</string>
    <string name="pregunta_generica_transporte4">Indica el consumo medio:</string>
    <string name="pregunta_generica_transporte5">¿Tienes una motocicleta en propiedad?</string>
    <string name="repuestas_rb_transporte15">Sí</string>
    <string name="repuestas_rb_transporte16">No</string>
    <string name="pregunta_generica_transporte6">Indica la cilindrada:</string>
    <string name="repuestas_rb_transporte17">inferior a 125cc</string>
    <string name="repuestas_rb_transporte18">125 - 500cc</string>
    <string name="repuestas_rb_transporte19">> 500cc</string>
    <string name="repuestas_rb_transporte20">Eléctrica (5KW)</string>
    <string name="pregunta_generica_transporte7">¿Qué tipo combustible utiliza?</string>
    <string name="repuestas_rb_transporte21">Gasolina</string>
    <string name="repuestas_rb_transporte22">Eléctrico</string>
    <string name="pregunta_generica_transporte8">Indica el consumo medio</string>
    <string name="pregunta_generica_transporte10">Indica los kilometros que realizas anualmente:</string>
    <string name="otros_transportes">Otros transportes</string>
    <string name="pregunta_generica_transporte11">Indica los kilometros que realizas anualmente en los siguientes transportes:</string>
    <string name="pregunta_transporte1">AVE</string>
    <string name="pregunta_transporte2">Tren larga distancia</string>
    <string name="pregunta_transporte3">Cercanías</string>
    <string name="pregunta_transporte4">Autobús urbano</string>
    <string name="pregunta_transporte5">Autocar</string>
    <string name="pregunta_transporte6">Metro</string>
    <string name="pregunta_transporte7">Vuelos (inferior a 850km)</string>
    <string name="pregunta_transporte8">Vuelos (851-3000km)</string>
    <string name="pregunta_transporte9">Vuelos (> 3000km)</string>
    <string name="tecnologia">Tecnología</string>
    <string name="pregunta_generica_tecnologa1">Indica el número de unidades y años que posees de las siguientes tecnologías:</string>
    <string name="pregunta_tecnologia1">PC sobremesa</string>
    <string name="pregunta_tecnologia2">Portátil</string>
    <string name="pregunta_tecnologia3">Tablets</string>
    <string name="pregunta_tecnologia4">Móviles</string>
    <string name="pregunta_tecnologia5">Router</string>
    <string name="pregunta_generica_tecnologa2">Indica el número de años de uso de cada una de ellas (solo las que tengas en propiedad actualmente):</string>
    <string name="emissionWeekly">Semanal</string>
    <string name="emissionMonthly">Mensual</string>
    <string name="emissionAnnual">Anual</string>
    <string name="results">Results</string>
    <string name="home">Finalizar</string>
    <string name="yourHistorial">Tu historial</string>
    <string name="yourCarbonFootprint">Tu huella</string>
    <string name="textGoal">Tu objetivo anual sostenible de emisiones de CO2 debería ser: </string>
    <string name="textAverage">El promedio de emisiones anual de CO2 en España es: </string>
    <string name="infoResults">Desliza hacia la izquierda para ver tus resultados con más detalle...</string>
    <string name="tipsInfo">¿Le gustaría aprender más acerca de cómo reducir su huella de carbono? ¡Haga clic a continuación y descubra cómo puede contribuir al salvamento del planeta!</string>
    <string name="tips">Consejos</string>
    <string name="userinfo_profile_content_description">User profile picture</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme">fb...</string>
    <string name="gp_WebApp_ClientId">460207532188-n7i1ro57aj8jue4ibph7ngjm30h30o11.apps.googleusercontent.com</string>
    <string name="gp_WebApp_ClientSecret">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</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>