<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte3"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte4"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte6"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte7"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte8"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte9"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte10"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte3"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte11"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte12"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte13"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte14"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editConsumoLitrosCar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:ems="100"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte10"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editCantidadKmCar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:ems="100"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte6"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte17"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte18"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte19"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte20"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte7"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte21"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/repuestas_rb_transporte22"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte8"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editConsumoLitrosMoto"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:ems="100"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte10"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editCantidadKmMoto"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:ems="100"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>